code/arm64/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codearm
spec:
  replicas: 0
  selector:
    matchLabels:
      app: codearm
  template:
    metadata:
      labels:
        app: codearm
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: codearm
          image: linuxserver/openvscode-server:1.141.0
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: s6-patch
              mountPath: /etc/s6-overlay/s6-rc.d/init-code-server
            - name: config-volume
              mountPath: /config
              readOnly: false
            - name: workspace-volume
              mountPath: /workspace
              readOnly: false
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: codearm-config-pvc
        - name: workspace-volume
          persistentVolumeClaim:
            claimName: codearm-workspace-pvc
        - name: s6-patch
          emptyDir: {}
