code/arm64/service.yml
apiVersion: v1
kind: Service
metadata:
  name: codearm-service
spec:
  selector:
    app: codearm
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
